# hello-cpp-cplex

./: .gitignore  CMakeLists.txt  Makefile  MyModel.h  README.md  main.cpp  main_with_model_class.cpp
